--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <link rel="icon" type="image/png" href="assets/img/favicon/favicon.png">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-  <!-- Google Fonts -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
   <!-- Bootstrap core CSS -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
   <!-- Material Design Bootstrap -->
@@ -17,7 +15,7 @@
   <!-- <script src="https://kit.fontawesome.com/cf644dec3a.js" crossorigin="anonymous"></script> -->
   <title>Omakase</title>
 </head>
-<body> 
+<body>
   <header>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-faded">
@@ -45,25 +43,27 @@
               <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
-        </div> 
+        </div>
       </div>
     </nav>
-      
+
     <!-- Banner -->
-    <div class="p-5 text-center bg-image" id="intro">
-      <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);"></div>
+    <div id="banner" class="p-5 text-center bg-image">
+      <div class="mask"></div>
         <div class="d-flex justify-content-center align-items-center h-100">
           <div class="text-white ">
-            <h1 class="mb-3 text-uppercase">Omakase</h1>
-            <h4 class="mb-3 text-uppercase">Tuesday - Saturday | 5:00 - 9:00PM</h4>
-            <a class="btn btn-outline-light btn-lg m-2 " href="#!" role="button">See menu</a> 
-            <a class="btn btn-outline-light btn-lg m-2 " href="#!" role="button">Book a table</a>
+            <!-- <h1 class="mb-3 text-uppercase">Omakase</h1> -->
+            <img class="logo-main" src="./assets/img/logo1.png" alt="main logo">
+            <hr />
+            <!-- <h4 class="mb-3 text-uppercase">Tuesday - Saturday | 5:00 - 9:00PM</h4> -->
+            <a class="btn btn-outline-dark btn-lg m-2 " href="#!" role="button">See menu</a>
+            <a class="btn btn-outline-dark btn-lg m-2 " href="#!" role="button">Book a table</a>
           </div>
         </div>
       </div>
     </div>
   </header>
-  
+
   <main>
     <!-- Divider  -->
     <div class="container-fluid px-0">
@@ -83,32 +83,32 @@
     <section id="about" class="text-center">
       <h2 class="my-3 text-uppercase">Our Mission</h2>
       <div class="row justify-content-center align-items-center">
-        <div class="col-lg-4 px-4">
-          <h2>100% Fish</h2>
-          <p>Bacon ipsum dolor amet ipsum reprehenderit hamburger in qui, sausage lorem chuck aliquip ham sirloin. Flank strip steak in minim shank swine corned beef. </p>
+        <div class="col-lg-4 p-5">
+          <h2>100% Tasty</h2>
+          <p>Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip. Sea lettuce lettuce water chestnut eggplant winter purslane fennel azuki bean earthnut pea sierra leone bologi leek soko chicory celtuce parsley edamame salsify.</p>
         </div>
         <div class="col-lg-4 nopadding">
-          <img src="assets/img/salmon.jpg" alt="making sushi" class="img-fluid">
+          <img src="assets/img/salmon.jpg" alt="fresh salmon" class="img-fluid">
         </div>
-        <div class="col-lg-4 px-4">
-          <h2>100% Tasty</h2>
+        <div class="col-lg-4 p-5">
+          <h2>100% Healthy</h2>
           <p>Pariatur et in prosciutto ball tip. Pig shankle elit sunt quis. Id bresaola fatback leberkas labore pastrami, proident duis drumstick elit jowl fugiat. Chuck fugiat aute quis ipsum kevin, venison culpa shank turducken ground round tempor. Beef proident meatloaf, cupim velit shank culpa excepteur. Kielbasa hamburger ham ribeye sausage non. Jerky et biltong bacon beef sed cillum.</p>
         </div>
         <div class="col-lg-4 nopadding">
-          <img src="assets/img/makingsushi.jpg" alt="making sushi" class="img-fluid">
+          <img src="assets/img/makingsushi.jpg" alt="sashimi appetizer" class="img-fluid">
         </div>
-        <div class="col-lg-4 px-4">
-          <h2>100% Sushi</h2>
-          <p>Pork loin biltong venison enim velit dolore spare ribs nulla occaecat. Sunt commodo excepteur ut exercitation laboris. Pancetta frankfurter ham ad minim in voluptate kevin hamburger shank spare ribs ham hock aliquip culpa. Tenderloin corned beef commodo ea sirloin pariatur in quis ut shoulder. Dolor ribeye adipisicing short ribs.</p>
+        <div class="col-lg-4 p-5">
+          <h2>100% Fresh</h2>
+          <p>Maguro loin biltong venison enim velit dolore spare ribs nulla occaecat. Sunt commodo excepteur ut exercitation laboris. Pancetta frankfurter ham ad minim in voluptate kevin hamburger shank spare ribs ham hock aliquip culpa. Tenderloin corned beef commodo ea sirloin pariatur in quis ut shoulder. Dolor ribeye adipisicing short ribs.</p>
         </div>
         <div class="col-lg-4 nopadding">
-          <img src="assets/img/sushi2.jpg" alt="making sushi" class="img-fluid">
+          <img src="assets/img/sushi2.jpg" alt="salmon nigiri" class="img-fluid">
         </div>
       </div>
     </section>
 
     <!-- Booking -->
-    <section id="book">
+    <section id="booking">
       <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);"></div>
       <div class="d-flex justify-content-center align-items-center h-100">
         <div class="text-white ">
@@ -117,21 +117,20 @@
       </div>
     </section>
   </main>
-  
+
   <footer>
     <div class="container text-center pt-3">
-      <section id="contact"> 
-        <h5>548 Market St, San Francisco, CA 94104</h5>
-        <h5>(650) 555-5555</h5>
+      <section id="contact">
+        <h6>548 Market St, San Francisco, CA 94104</h6>
+        <h6>Tel: (650) 555-5555</h6>
+        <h6>Email: eatOmakaze@gmail.com</h6>
       </section>
     </div>
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
-    </div>
+    <div class="footer-copyright text-center text-muted py-3">&#169;2021 Omakase LLC</div>
   </footer>
-  
-  
+
+
   <!-- JQuery -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <!-- Bootstrap tooltips -->
