--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#book">Book</a>
+              <a class="nav-link" href="#booking">Reservation</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -52,12 +52,10 @@
       <div class="mask"></div>
         <div class="d-flex justify-content-center align-items-center h-100">
           <div class="text-white ">
-            <!-- <h1 class="mb-3 text-uppercase">Omakase</h1> -->
             <img class="logo-main" src="./assets/img/logo1.png" alt="main logo">
             <hr />
-            <!-- <h4 class="mb-3 text-uppercase">Tuesday - Saturday | 5:00 - 9:00PM</h4> -->
-            <a class="btn btn-outline-dark btn-lg m-2 " href="#!" role="button">See menu</a>
-            <a class="btn btn-outline-dark btn-lg m-2 " href="#!" role="button">Book a table</a>
+            <a class="btn btn-outline-dark btn-lg m-2" href="#!" role="button">See menu</a>
+            <a class="btn btn-outline-dark btn-lg m-2" href="#!" role="button">Book a table</a>
           </div>
         </div>
       </div>
@@ -69,11 +67,11 @@
     <div class="container-fluid px-0">
       <section class="divider pt-4">
         <div class="row justify-content-center align-items-center">
-          <div class="col-md-4 text-left pr-5">
-            <h2 class="pb-4">Discover Sushi</h2>
+          <div class="col-md-3 text-center pr-5">
+            <h2 class="pb-2">Discover Sushi</h2>
           </div>
-          <div class="col-md-4">
-            <p class="pb-4">Spicy jalapeno bacon ipsum dolor amet tongue burgdoggen swine tail ham hock. Pork loin cupim burgdoggen beef ribs, alcatra swine bresaola rump ham hock hamburger picanha filet mignon. Chuck andouille chicken, picanha bresaola turkey buffalo. Flank chislic chuck fatback drumstick pancetta short loin frankfurter burgdoggen. Jowl cow filet mignon tenderloin buffalo.</p>
+          <div class="col-md-7">
+            <p class="p-4">Spicy jalapeno bacon ipsum dolor amet tongue burgdoggen swine tail ham hock. Pork loin cupim burgdoggen beef ribs, alcatra swine bresaola rump ham hock hamburger picanha filet mignon. Chuck andouille chicken, picanha bresaola turkey buffalo. Flank chislic chuck fatback drumstick pancetta short loin frankfurter burgdoggen. Jowl cow filet mignon tenderloin buffalo.</p>
           </div>
         </div>
       </section>
@@ -81,27 +79,27 @@
 
     <!-- About -->
     <section id="about" class="text-center">
-      <h2 class="my-3 text-uppercase">Our Mission</h2>
-      <div class="row justify-content-center align-items-center">
-        <div class="col-lg-4 p-5">
+      <!-- <h2 class="my-3 text-uppercase">Our Mission</h2> -->
+      <div class="row d-flex justify-content-center align-items-center p-0">
+        <div class="col-md-4 order-2 p-5">
           <h2>100% Tasty</h2>
           <p>Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip. Sea lettuce lettuce water chestnut eggplant winter purslane fennel azuki bean earthnut pea sierra leone bologi leek soko chicory celtuce parsley edamame salsify.</p>
         </div>
-        <div class="col-lg-4 nopadding">
+        <div class="col-md-4 nopadding">
           <img src="assets/img/salmon.jpg" alt="fresh salmon" class="img-fluid">
         </div>
-        <div class="col-lg-4 p-5">
+        <div class="col-md-4 p-5">
           <h2>100% Healthy</h2>
           <p>Pariatur et in prosciutto ball tip. Pig shankle elit sunt quis. Id bresaola fatback leberkas labore pastrami, proident duis drumstick elit jowl fugiat. Chuck fugiat aute quis ipsum kevin, venison culpa shank turducken ground round tempor. Beef proident meatloaf, cupim velit shank culpa excepteur. Kielbasa hamburger ham ribeye sausage non. Jerky et biltong bacon beef sed cillum.</p>
         </div>
-        <div class="col-lg-4 nopadding">
+        <div class="col-md-4 nopadding">
           <img src="assets/img/makingsushi.jpg" alt="sashimi appetizer" class="img-fluid">
         </div>
-        <div class="col-lg-4 p-5">
+        <div class="col-md-4 p-5">
           <h2>100% Fresh</h2>
           <p>Maguro loin biltong venison enim velit dolore spare ribs nulla occaecat. Sunt commodo excepteur ut exercitation laboris. Pancetta frankfurter ham ad minim in voluptate kevin hamburger shank spare ribs ham hock aliquip culpa. Tenderloin corned beef commodo ea sirloin pariatur in quis ut shoulder. Dolor ribeye adipisicing short ribs.</p>
         </div>
-        <div class="col-lg-4 nopadding">
+        <div class="col-md-4 nopadding">
           <img src="assets/img/sushi2.jpg" alt="salmon nigiri" class="img-fluid">
         </div>
       </div>
@@ -109,7 +107,7 @@
 
     <!-- Booking -->
     <section id="booking">
-      <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);"></div>
+      <div class="mask"></div>
       <div class="d-flex justify-content-center align-items-center h-100">
         <div class="text-white ">
           <a class="btn btn-outline-light btn-lg m-2 " href="#!" role="button">Book a table</a>
