replace lorem ipsums

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <h2 class="pb-2">Discover Sushi</h2>
           </div>
           <div class="col-md-7">
-            <p class="p-4">Spicy jalapeno bacon ipsum dolor amet tongue burgdoggen swine tail ham hock. Pork loin cupim burgdoggen beef ribs, alcatra swine bresaola rump ham hock hamburger picanha filet mignon. Chuck andouille chicken, picanha bresaola turkey buffalo. Flank chislic chuck fatback drumstick pancetta short loin frankfurter burgdoggen. Jowl cow filet mignon tenderloin buffalo.</p>
+            <p class="p-4">Omakaze serves the carefully crafted menu of Chef Akira Yoshizumi. With ingredients sourced both domestically and internationally, he crafts a very special tasting menu rooted his own style of Edomae sushi, learned from his sushi master from Tokyo. Chef Yoshizumi is a strong believer in making sure the food he serves represents the waters he is surrounded by. Only the freshest and best ingredients, prepared with dedication, love, and passion find their way to your plate.</p>
           </div>
         </div>
       </section>
@@ -79,25 +79,27 @@
 
     <!-- About -->
     <section id="about" class="text-center">
-      <!-- <h2 class="my-3 text-uppercase">Our Mission</h2> -->
+      <div class="mission">
+        <h2 class="my-3 text-uppercase">Our Mission</h2>
+      </div>
       <div class="row d-flex justify-content-center align-items-center p-0">
         <div class="col-md-4 order-2 p-5">
-          <h2>100% Tasty</h2>
-          <p>Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip. Sea lettuce lettuce water chestnut eggplant winter purslane fennel azuki bean earthnut pea sierra leone bologi leek soko chicory celtuce parsley edamame salsify.</p>
+          <h2>Flavor</h2>
+          <p>We have partnered with chefs trained in the top restaurants of Tokyo to bring our customers true authentic and traditional Japanese "Edomae" style sushi. Our chefs will innovatively expose your sense of sight, smell, and umami.</p>
         </div>
         <div class="col-md-4 nopadding">
           <img src="assets/img/salmon.jpg" alt="fresh salmon" class="img-fluid">
         </div>
         <div class="col-md-4 p-5">
-          <h2>100% Healthy</h2>
-          <p>Pariatur et in prosciutto ball tip. Pig shankle elit sunt quis. Id bresaola fatback leberkas labore pastrami, proident duis drumstick elit jowl fugiat. Chuck fugiat aute quis ipsum kevin, venison culpa shank turducken ground round tempor. Beef proident meatloaf, cupim velit shank culpa excepteur. Kielbasa hamburger ham ribeye sausage non. Jerky et biltong bacon beef sed cillum.</p>
+          <h2>Health</h2>
+          <p>Our focus is to combine creativity and various Japanese cooking techniques to bring you the healthiest of eating choices. Fish in particular is full of health benefits—it's full of protein, vitamins, antioxidants, and omega 3 fatty acids. Good for your heart, good for your taste buds, and good for life.</p>
         </div>
         <div class="col-md-4 nopadding">
           <img src="assets/img/makingsushi.jpg" alt="sashimi appetizer" class="img-fluid">
         </div>
         <div class="col-md-4 p-5">
-          <h2>100% Fresh</h2>
-          <p>Maguro loin biltong venison enim velit dolore spare ribs nulla occaecat. Sunt commodo excepteur ut exercitation laboris. Pancetta frankfurter ham ad minim in voluptate kevin hamburger shank spare ribs ham hock aliquip culpa. Tenderloin corned beef commodo ea sirloin pariatur in quis ut shoulder. Dolor ribeye adipisicing short ribs.</p>
+          <h2>Quality</h2>
+          <p>Choose from two different fixed-price tasting menus that will take you through your senses. The culinary journey you experience will introduce you to the many flavors of Japanese cuisine with our fish carefully selected and flown in from the famous Tsukiji Fish Market in Tokyo, Japan. </p>
         </div>
         <div class="col-md-4 nopadding">
           <img src="assets/img/sushi2.jpg" alt="salmon nigiri" class="img-fluid">
@@ -121,7 +123,7 @@
       <section id="contact">
         <h6>548 Market St, San Francisco, CA 94104</h6>
         <h6>Tel: (650) 555-5555</h6>
-        <h6>Email: eatOmakaze@gmail.com</h6>
+        <h6>Email: discoverOmakaze@gmail.com</h6>
       </section>
     </div>
     <!-- Copyright -->
