fix script src typo

--- a/index.html
+++ b/index.html
@@ -83,25 +83,25 @@
         <h2 class="my-3 text-uppercase">Our Mission</h2>
       </div>
       <div class="row d-flex justify-content-center align-items-center p-0">
-        <div class="col-md-4 order-2 p-5">
+        <div class="col-sm-12 col-md-4 order-2 p-5">
           <h2>Flavor</h2>
           <p>We have partnered with chefs trained in the top restaurants of Tokyo to bring our customers true authentic and traditional Japanese "Edomae" style sushi. Our chefs will innovatively expose your sense of sight, smell, and umami.</p>
         </div>
-        <div class="col-md-4 nopadding">
+        <div class="col-sm-12 col-md-4 nopadding">
           <img src="assets/img/salmon.jpg" alt="fresh salmon" class="img-fluid">
         </div>
-        <div class="col-md-4 p-5">
+        <div class="col-sm-12 col-md-4 p-5">
           <h2>Health</h2>
           <p>Our focus is to combine creativity and various Japanese cooking techniques to bring you the healthiest of eating choices. Fish in particular is full of health benefits—it's full of protein, vitamins, antioxidants, and omega 3 fatty acids. Good for your heart, good for your taste buds, and good for life.</p>
         </div>
-        <div class="col-md-4 nopadding">
+        <div class="col-sm-12 col-md-4 nopadding">
           <img src="assets/img/makingsushi.jpg" alt="sashimi appetizer" class="img-fluid">
         </div>
-        <div class="col-md-4 p-5">
+        <div class="col-sm-12 col-md-4 p-5">
           <h2>Quality</h2>
           <p>Choose from two different fixed-price tasting menus that will take you through your senses. The culinary journey you experience will introduce you to the many flavors of Japanese cuisine with our fish carefully selected and flown in from the famous Tsukiji Fish Market in Tokyo, Japan. </p>
         </div>
-        <div class="col-md-4 nopadding">
+        <div class="col-sm-12 col-md-4 nopadding">
           <img src="assets/img/sushi2.jpg" alt="salmon nigiri" class="img-fluid">
         </div>
       </div>
@@ -140,6 +140,6 @@
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
   <!-- Custom scripts  -->
-  <script type="text/javascript" src="assets/js/scripts.js"></script>
+  <script type="text/javascript" src="assets/js/script.js"></script>
 </body>
 </html>
