--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <header>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-faded">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light bg-faded fixed-top">
       <div class="container">
         <!-- Navbar brand -->
         <a class="navbar-brand" href="#">
@@ -49,14 +49,12 @@
 
     <!-- Banner -->
     <div id="banner" class="p-5 text-center bg-image">
-      <div class="mask"></div>
-        <div class="d-flex justify-content-center align-items-center h-100">
-          <div class="text-white ">
-            <img class="logo-main" src="./assets/img/logo1.png" alt="main logo">
-            <hr />
-            <a class="btn btn-outline-dark btn-lg m-2" href="#!" role="button">See menu</a>
-            <a class="btn btn-outline-dark btn-lg m-2" href="#!" role="button">Book a table</a>
-          </div>
+      <div class="d-flex justify-content-center align-items-center h-100">
+        <div class="text-white p-5">
+          <img class="logo-main" src="./assets/img/logo1.png" alt="main logo">
+          <hr />
+          <a class="btn btn-outline-dark btn-lg m-2" href="#!" role="button">See menu</a>
+          <a class="btn btn-outline-dark btn-lg m-2" href="#!" role="button">Book a table</a>
         </div>
       </div>
     </div>
@@ -80,9 +78,9 @@
     <!-- About -->
     <section id="about" class="text-center">
       <div class="mission">
-        <h2 class="my-3 text-uppercase">Our Mission</h2>
+        <h2 class="text-uppercase m-0 p-2">Our Mission</h2>
       </div>
-      <div class="row d-flex justify-content-center align-items-center p-0">
+      <div class="row d-flex justify-content-center align-items-center">
         <div class="col-sm-12 col-md-4 order-2 p-5">
           <h2>Flavor</h2>
           <p>We have partnered with chefs trained in the top restaurants of Tokyo to bring our customers true authentic and traditional Japanese "Edomae" style sushi. Our chefs will innovatively expose your sense of sight, smell, and umami.</p>
@@ -109,7 +107,6 @@
 
     <!-- Booking -->
     <section id="booking">
-      <div class="mask"></div>
       <div class="d-flex justify-content-center align-items-center h-100">
         <div class="text-white ">
           <a class="btn btn-outline-light btn-lg m-2 " href="#!" role="button">Book a table</a>
@@ -121,9 +118,10 @@
   <footer>
     <div class="container text-center pt-3">
       <section id="contact">
-        <h6>548 Market St, San Francisco, CA 94104</h6>
-        <h6>Tel: (650) 555-5555</h6>
-        <h6>Email: discoverOmakaze@gmail.com</h6>
+        <h6>548 Market St</h6>
+        <h6>San Francisco, CA 94104</h6>
+        <h6>(650) 555-5555</h6>
+        <h6>discoverOmakaze@gmail.com</h6>
       </section>
     </div>
     <!-- Copyright -->
