--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <!-- About -->
     <section id="about" class="text-center">
-      <div class="mission">
+      <div class="container-fluid mission">
         <h2 class="text-uppercase m-0 p-2">Our Mission</h2>
       </div>
       <div class="row d-flex justify-content-center align-items-center">
